[package]
name = "classroom_app_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.26"
sqlite = "0.31.0"
clap = { version = "4.0", features = ["derive"] }
actix-web = "4.3.1"
rand = "0.8.5"
